--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
- <title>Maghery Festival 2016</title>
+ <title>Maghery Festival </title>
  <meta charset="UTF-8" />
  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
