--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
  <meta charset="UTF-8" />
  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="shortcut icon" href="images/favicon.ico" />
  <meta name="author" content="Ben Harkin">
  <meta name="keywords" content="Maghery, Sea, BBQ, seaside, Festival, Ireland, Donegal, Machery, Termon, Tearmann, Craic, Events ,Summer, Sunshine, Irish Festivals, Rosses, Wild Atlantic Way, MAghery Festival">
  <meta name=”description” content=”Maghery Festival is a community festival designed around fun, food and family, come and visit is for a great days fun.“>
