added new alert

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 
  <div class="learn-more">
 	  <div class="container">
+      <div class="alert alert-info" role="alert"><h4>!!!!!!!!!!!!!!There will be a tractor run, novelty events and seafood night on at The Strand Bar on the 10th of September. We would love for everyone to come along and there will be a load of turf raffled off on the night too, so it's sure to be a great night.</h4></div>
 		<div class="row">
 	      <div class="col-md-4">
 			<h3>Schedule</h3>
