--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="w3.css">
 <link rel="stylesheet" type="text/css" href="style.css">
+<meta name="google-site-verification" content="I04PwebBY014OTIFgov-su7jdzPZDmy6rwYFF0-Nw-8" />
 <body>
 
 <div class="w3-container"> 
@@ -44,7 +45,7 @@ We can guarantee you're going to have some craic!
         <h1 style="color: #007CBC;">Schedule</h1>
     </div>
 <div class="w3-container">
-  <h3>Tuesday</h3>
+  <h3>Tuesday 8th August</h3>
 
   <table class="w3-table w3-striped w3-border">
     <tr>
@@ -80,7 +81,7 @@ We can guarantee you're going to have some craic!
   </table>
 </div>
 <div class="w3-container">
-  <h3>Wednsday</h3>
+  <h3>Wednsday 9th August</h3>
 
   <table class="w3-table w3-striped w3-border">
     <tr>
@@ -110,7 +111,7 @@ We can guarantee you're going to have some craic!
   </table>
 </div>
 <div class="w3-container">
-  <h3>Thursday</h3>
+  <h3>Thursday 10th August</h3>
 
   <table class="w3-table w3-striped w3-border">
     <tr>
@@ -171,7 +172,7 @@ We can guarantee you're going to have some craic!
   </table>
 </div>
 <div class="w3-container">
-  <h3>Friday</h3>
+  <h3>Friday 11th August</h3>
 
   <table class="w3-table w3-striped w3-border">
     <tr>
@@ -243,7 +244,7 @@ We can guarantee you're going to have some craic!
   </table>
 </div>
 <div class="w3-container">
-  <h3>Saturday</h3>
+  <h3>Saturday 12th August</h3>
 
   <table class="w3-table w3-striped w3-border">
     <tr>
@@ -321,7 +322,7 @@ We can guarantee you're going to have some craic!
   </table>
 </div>
 <div class="w3-container" style="padding-bottom: 10px;">
-  <h3>Sunday</h3>
+  <h3>Sunday 13th August</h3>
 
   <table class="w3-table w3-striped w3-border">
     <tr>
