--- a/index.html
+++ b/index.html
@@ -427,6 +427,15 @@ We can guarantee you're going to have some craic!
     </div>
     </div>
     </div>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
+  ga('create', 'UA-81749120-3', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </body>
 </html> 
