--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ We can guarantee you're going to have some craic!
     </div>
     </div>
 
-<div class="w3-container" style="display:none;"> 
+<div class="w3-container"> 
   <div class="w3-card-4 w3-section" style="width:97%;">
     <div class="w3-container w3-teal">
         <h1 style="color: #007CBC;">Schedule</h1>
