new header image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 
 <div class="w3-container"> 
   <div class="w3-card-4 w3-section" style="width:97%;">
-    <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t31.0-8/15994505_1254885801224165_7671223071586980944_o.jpg?oh=c5a4181c408269f45926ce9b4edd84db&oe=599BDCB6" alt="Trolltunga" style="width:100%;">
+    <h1 style="text-align:center">Maghery Community Festival</h1>
+    <img src="http://mw2.google.com/mw-panoramio/photos/medium/1423803.jpg" alt="" style="width:100%;">
     </div>
   </div>
 <div class="w3-container">
@@ -39,363 +40,7 @@ We can guarantee you're going to have some craic!
     </div>
     </div>
 
-<div class="w3-container"> 
-  <div class="w3-card-4 w3-section" style="width:97%;">
-    <div class="w3-container w3-teal">
-        <h1 style="color: #007CBC;">Schedule</h1>
-    </div>
-<div class="w3-container">
-  <h3>Tuesday 8th August</h3>
 
-  <table class="w3-table w3-striped w3-border">
-    <tr>
-      <th>Event</th>
-      <th>Time</th>
-      <th>Place</th>
-      <th>Price</th>
-    </tr>
-        <tr>
-      <td>Kayaking- Age 7-10</td>
-      <td>5:00pm</td>
-      <td>Maghery Pier</td>
-      <td>€10</td>
-    </tr>
-    <tr>
-      <td>Bowls with Maghery Bowls</td>
-      <td>7:00pm</td>
-      <td>Ionad an Mhachaire</td>
-      <td>Free</td>
-    </tr>
-    <tr>
-      <td>Sunset Kayaking</td>
-      <td>7:00pm</td>
-      <td>Maghery Pier</td>
-      <td>€15</td>
-    </tr>
-    <tr>
-      <td>Live Music with the Strand Ceilí Band</td>
-      <td>9:00pm</td>
-      <td>Strand Bar</td>
-      <td>Free</td>
-    </tr>
-  </table>
-</div>
-<div class="w3-container">
-  <h3>Wednsday 9th August</h3>
-
-  <table class="w3-table w3-striped w3-border">
-    <tr>
-      <th>Event</th>
-      <th>Time</th>
-      <th>Place</th>
-      <th>Price</th>
-    </tr>
-    <tr>
-      <td>Childrens Art Activity Camp - Ages 5+</td>
-      <td>11:00am to 1:00pm</td>
-      <td>Ionad an Mhachaire</td>
-      <td>€5 per Child, Family Rates Available</td>
-    </tr>
-    <tr>
-      <td>Wildflower Walk with Emer</td>
-      <td>11:00am</td>
-      <td>Ionad an Mhachaire</td>
-      <td>€5</td>
-    </tr>
-    <tr>
-      <td>Childrens Cinema Matinee</td>
-      <td>3:30pm</td>
-      <td>Ionad an Mhachair</td>
-      <td>€2 per Child</td>
-    </tr>
-  </table>
-</div>
-<div class="w3-container">
-  <h3>Thursday 10th August</h3>
-
-  <table class="w3-table w3-striped w3-border">
-    <tr>
-      <th>Event</th>
-      <th>Time</th>
-      <th>Place</th>
-      <th>Price</th>
-    </tr>
-    <tr>
-      <td>Stand Up Paddle Boarding</td>
-      <td>9:00am</td>
-      <td>Maghery Pier</td>
-      <td>€20</td>
-    </tr>
-    <tr>
-      <td>10km Walk with Maureen</td>
-      <td>10:00am</td>
-      <td>Ionad an Mhachaire</td>
-      <td>€10</td>
-    </tr>
-    <tr>
-      <td>Childrens Art Activity Camp - Ages 5+</td>
-      <td>11:00am to 1:00pm</td>
-      <td>Ionad an Mhachaire</td>
-      <td>€5 per Child, Family Rates Available</td>
-    </tr>
-    <tr>
-      <td>Childrens Cinema Matinee</td>
-      <td>3:30pm</td>
-      <td>Ionad an Mhachaire</td>
-      <td>€2 per Child</td>
-    </tr>
-    <tr>
-      <td>Kids Selfie Treasure Hunt - Take Selfies with the Clues!</td>
-      <td>5:00pm</td>
-      <td>Ionad an Mhachaire</td>
-      <td>€2 per Child</td>
-    </tr>
-    <tr>
-      <td>Annual 5km Road Race & Junior 1km Road Race</td>
-      <td>7:00pm</td>
-      <td>Registration from 6:30pm at Strand Bar</td>
-      <td>5km - €5 | 1km - €2</td>
-    </tr>
-    <tr>
-      <td><b>Official Opening of the 12th Maghery Festival!</b></td>
-      <td>8:30pm</td>
-      <td>Ionad an Mhachaire, Local Woman Bridget O'Donnell will open this years festival.</td>
-      <td>Free</td>
-    </tr>
-    <tr>
-      <td>DJ Michael Martin</td>
-      <td>Nightly Music</td>
-      <td>Strand Bar</td>
-      <td>Free</td>
-    </tr>
-
-  </table>
-</div>
-<div class="w3-container">
-  <h3>Friday 11th August</h3>
-
-  <table class="w3-table w3-striped w3-border">
-    <tr>
-      <th>Event</th>
-      <th>Time</th>
-      <th>Place</th>
-      <th>Price</th>
-    </tr>
-    <tr>
-      <td>7km Walk with Jack</td>
-      <td>10:00am</td>
-      <td>Ionad an Mhachaire</td>
-      <td>€10</td>
-    </tr>
-    <tr>
-      <td>Childrens Art Activity Camp - Ages 5+</td>
-      <td>11:00am to 1:00pm</td>
-      <td>Ionad an Mhachaire</td>
-      <td>€5 per Child, Family Rates Available</td>
-    </tr>
-    <tr>
-      <td><b>Blessing of the Boats & Annual Fishing Competition</b></td>
-      <td>12:00pm</td>
-      <td>Blessing at Maghery Pier followed by Deep Sea, Rock or Kayak Fishing. If you are departing from any pier other than Maghery, you must pre-register on 086 8375430. All Fishermen must return to the Strand Bar by 5:30pm. BRING YOUR LIFE JACKET.</td>
-      <td> €15 per Adult | €5 per Child</td>
-    </tr>
-    <tr>
-      <td>Horse Riding with Maghery Equestrian</td>
-      <td>1:00pm</td>
-      <td>Maghery Beach</td>
-      <td>€2 per Child</td>
-    </tr>
-    <tr>
-      <td>'Express' Junior Jiving Lessons - Just in time for Lee Matthews!</td>
-      <td>2:00pm</td>
-      <td>Ionad an Mhachaire</td>
-      <td>€2 per Child</td>
-    </tr>
-    <tr>
-      <td>Childrens Cinema Matinee</td>
-      <td>3:30pm</td>
-      <td>Ionad an Mhachaire</td>
-      <td>€2 per Child</td>
-    </tr>
-        <tr>
-      <td>Live Music with Danny & James!</td>
-      <td>5:30pm</td>
-      <td>Strand Bar</td>
-      <td>Free</td>
-    </tr>
-        <tr>
-      <td>The Landing of the Catch</td>
-      <td>6:00pm</td>
-      <td>Strand Bar</td>
-      <td>Free</td>
-    </tr>
-        <tr>
-      <td><b>Lee Matthews Live!</b></td>
-      <td>7:00pm</td>
-      <td>Ionad an Mhachaire</td>
-      <td>€10 per Adult | €25 per Family of 4</td>
-    </tr>
-    <tr>
-      <td>JD Discos</td>
-      <td>Nightly Music</td>
-      <td>Strand Bar</td>
-      <td>Free</td>
-    </tr>
-  </table>
-</div>
-<div class="w3-container">
-  <h3>Saturday 12th August</h3>
-
-  <table class="w3-table w3-striped w3-border">
-    <tr>
-      <th>Event</th>
-      <th>Time</th>
-      <th>Place</th>
-      <th>Price</th>
-    </tr>
-    <tr>
-      <td>Hill Walk with Hugh Gerard</td>
-      <td>10:00am </td>
-      <td>Hiking Boots Essential, Ionad an Mhachaire</td>
-      <td>€10</td>
-    </tr>
-    <tr>
-      <td>Under 12's Soccer Camp with Strand Rovers</td>
-      <td>11:00am</td>
-      <td>Strand Park</td>
-      <td>Free</td>
-    </tr>
-    <tr>
-      <td>Fun at the Beach</td>
-      <td>11:00am</td>
-      <td>Maghery Beach</td>
-      <td>Free</td>
-    </tr>
-      <tr>
-      <td>Car Boot Sale</td>
-      <td>12:00pm</td>
-      <td>Strand Park</td>
-      <td>€10 per Boot/Sale</td>
-    </tr>
-    <tr>
-      <td>Dance Mania with Pinehill Studios</td>
-      <td>1:00pm</td>
-      <td>Ionad an Mhachaire</td>
-      <td>€3 per Child</td>
-    </tr>
-    <tr>
-      <td>Teen Bubble Football</td>
-      <td>2:30pm</td>
-      <td>Strand Park</td>
-      <td>€10 per Team of 5</td>
-    </tr>
-    <tr>
-      <td>Adult Bubble Football</td>
-      <td>5:30pm</td>
-      <td>Strand Park</td>
-      <td>€20 per Team of 5</td>
-    </tr>
-    <tr>
-      <td>Walk the Plank with the 'Kings'!</td>
-      <td>5:30pm</td>
-      <td>Strand Park</td>
-      <td>€2 per entrant</td>
-    </tr>
-    <tr>
-      <td>Dolly Competition</td>
-      <td>5:30pm</td>
-      <td>Strand Park</td>
-      <td>€2 per entrant</td>
-    </tr>
-    <tr>
-      <td><b>Election of the 2017 King of Maghery!</b></td>
-      <td>9:00pm</td>
-      <td>Ionad an Mhachaire</td>
-      <td>Free</td>
-    </tr>
-    <tr>
-      <td>JD Discos</td>
-      <td>Nightly Music</td>
-      <td>Strand Bar</td>
-      <td>Free</td>
-    </tr>
-  </table>
-</div>
-<div class="w3-container" style="padding-bottom: 10px;">
-  <h3>Sunday 13th August</h3>
-
-  <table class="w3-table w3-striped w3-border">
-    <tr>
-      <th>Event</th>
-      <th>Time</th>
-      <th>Place</th>
-      <th>Price</th>
-    </tr>
-    <tr>
-      <td>The Blessing of the Graves</td>
-      <td>Dungloe Graveyard - 12:15pm<br>Maghery Graveyard - 2:00pm</td>
-      <td>A one-way system will be in operation across the Cullion Road for the Maghery service, Parking available in Strand Park</td>
-      <td>-</td>
-    </tr>
-    <tr>
-      <td>Emigrants Social with the Strand Ceilí & the Maghery Junior Bands</td>
-      <td>3:00am</td>
-      <td>Ionad an Mhachaire</td>
-      <td>Donations Welcome</td>
-    </tr>
-    <tr>
-      <td>The Annual Pet Show</td>
-      <td>3:00pm</td>
-      <td>With prizes for Most Waggily Tail & lots more! Strand Park</td>
-      <td>Free</td>
-    </tr>
-    <tr>
-      <td>Snorkelling with Brian, Lee & Vinny</td>
-      <td>3:30pm</td>
-      <td>Ionad an Mhachaire</td>
-      <td>€15</td>
-    </tr>
-    <tr>
-      <td>Sports Day</td>
-      <td>3:30pm</td>
-      <td>Strand Park</td>
-      <td>Free</td>
-    </tr>
-    <tr>
-      <td>Mega Draw - The Results!</td>
-      <td>3:30pm</td>
-      <td>Ionad an Mhachaire</td>
-      <td>Free</td>
-    </tr>
-    <tr>
-      <td>Sunday Music Session with Mutt!</td>
-      <td>3:30pm</td>
-      <td>Strand Bar</td>
-      <td>Free</td>
-    </tr>
-    <tr>
-      <td>Marching Band Recital</td>
-      <td>5:00pm</td>
-      <td>Strand Park</td>
-      <td>€5 per Child, Family Rates Available</td>
-    </tr>
-    <tr>
-      <td>Farewell BBQ</td>
-      <td>7:00pm</td>
-      <td>Strand Bar Marquee</td>
-      <td>€10 per Adult | €6 per Child</td>
-    </tr>
-    <tr>
-      <td>Night Music Session with Mutt & Friends</td>
-      <td>Nightly Music</td>
-      <td>Strand Bar</td>
-      <td>Free</td>
-    </tr>
-  </table>
-</div>
-
-    </div>
-    </div>
 
     <div class="w3-container"> 
   <div class="w3-card-4 w3-section" style="width:97%;">
