--- a/gallery.html
+++ b/gallery.html
@@ -7,16 +7,16 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <body>
 
-<div class="w3-container"> 
-  <div class="w3-card-4 w3-section" style="width:97%;">
-    <img src="https://scontent-lhr3-1.xx.fbcdn.net/v/t31.0-8/15994505_1254885801224165_7671223071586980944_o.jpg?oh=c5a4181c408269f45926ce9b4edd84db&oe=599BDCB6" alt="Trolltunga" style="width:100%;">
+  <div class="w3-container"> 
+    <div class="w3-card-4 w3-section" style="width:97%;">
+      <h1 style="text-align:center">Maghery Community Festival</h1>
+      <img src="http://mw2.google.com/mw-panoramio/photos/medium/1423803.jpg" alt="" style="width:100%;">
+      </div>
     </div>
+  <div class="w3-container">
+    <a href="index.html" class="w3-bar-item w3-button w3-mobile" style="width:49%;color:#007CBC;">Home</a>
+    <a href="gallery.html" class="w3-bar-item w3-button w3-mobile" style="width:49%;background-color: #007CBC;color:white;">Gallery</a>
   </div>
-<div class="w3-container">
-  <a href="index.html" class="w3-bar-item w3-button w3-mobile" style="width:33%;color:#007CBC;">Home</a>
-  <a href="king.html" class="w3-bar-item w3-button w3-mobile" style="width:33%;color:#007CBC;">King of Maghery</a>
-  <a href="gallery.html" class="w3-bar-item w3-button w3-mobile" style="width:33%;background-color: #007CBC;color:white;">Gallery</a>
-</div>
 
 <div class="w3-container">
   <div class="w3-container">
