--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <link rel="stylesheet" type="text/css" href="w3.css">
 <link rel="stylesheet" type="text/css" href="style.css">
 <meta name="google-site-verification" content="I04PwebBY014OTIFgov-su7jdzPZDmy6rwYFF0-Nw-8" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
 <body>
 
 <div class="w3-container"> 
@@ -14,9 +16,8 @@
     </div>
   </div>
 <div class="w3-container">
-  <a href="index.html" class="w3-bar-item w3-button w3-mobile" style="width:33%;background-color: #007CBC;color:white;">Home</a>
-  <a href="king.html" class="w3-bar-item w3-button w3-mobile" style="width:33%;color:#007CBC;">King of Maghery</a>
-  <a href="gallery.html" class="w3-bar-item w3-button w3-mobile" style="width:33%;color:#007CBC;">Gallery</a>
+  <a href="index.html" class="w3-bar-item w3-button w3-mobile" style="width:49%;background-color: #007CBC;color:white;">Home</a>
+  <a href="gallery.html" class="w3-bar-item w3-button w3-mobile" style="width:49%;color:#007CBC;">Gallery</a>
 </div>
 
 <div class="w3-container"> 
@@ -28,6 +29,41 @@ We can guarantee you're going to have some craic!
 </p>    
   </div>
 </div>
+<div class="w3-container"> 
+  <div class="w3-card-4 w3-section" style="width:97%;">
+    <div class="w3-container w3-teal">
+        <h1 >Schedule</h1>
+    </div>
+
+    <div class="w3-container w3-center">
+        <h1 style="color:#007CBC;">Tuesday August 7th</h1>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Time</th>
+            <th scope="col">Event</th>
+            <th scope="col">Place</th>
+            <th scope="col">Price</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">7.00pm</th>
+            <td>Bowls Competition with Maghery Bowling Club</td>
+            <td>Ionad an Mhachaire</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <th scope="row">9.00pm</th>
+            <td>Live Music with the Strand Ceilí Band</td>
+            <td>Strand Bar</td>
+            <td>-</td>
+          </tr>
+        </tbody>
+      </table> 
+    </div>
+    </div>
+    </div>
 <div class="w3-container"> 
   <div class="w3-card-4 w3-section" style="width:97%;">
     <div class="w3-container w3-teal">
@@ -52,7 +88,7 @@ We can guarantee you're going to have some craic!
     <i><p style="color:#65A0E6;">0877733203 / 074 9522724</p></i>
   </div>
     <div class="w3-container w3-center">
-  <b><p style="color:#007CBC;">Committee Memebers:</p></b>
+  <b><p style="color:#007CBC;">Committee Members:</p></b>
   <div class="w3-col s4 w3-center" style="width:25%;color:#007CBC;">
     <p style="color:#007CBC;">Paula:</p>
     <i><p style="color:#65A0E6;">086 3481068</p></i>
