--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
+<head>
 <title>Maghery Community Festival</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="w3.css">
 <link rel="stylesheet" type="text/css" href="style.css">
 <meta name="google-site-verification" content="I04PwebBY014OTIFgov-su7jdzPZDmy6rwYFF0-Nw-8" />
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lobster" />
+</head>
 <body>
 
 <div class="w3-container"> 
   <div class="w3-card-4 w3-section" style="width:97%;">
-    <h1 style="text-align:center">Maghery Community Festival</h1>
+    <h1 style="text-align:center;color:#007CBC;">Maghery Community Festival</h1>
     <img src="http://mw2.google.com/mw-panoramio/photos/medium/1423803.jpg" alt="" style="width:100%;">
     </div>
   </div>
@@ -61,6 +63,335 @@ We can guarantee you're going to have some craic!
           </tr>
         </tbody>
       </table> 
+      <h1 style="color:#007CBC;">Wednesday August 8th</h1>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Time</th>
+            <th scope="col">Event</th>
+            <th scope="col">Place</th>
+            <th scope="col">Price</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">11.00am</th>
+            <td>History and Archeology walk of Termon with Hugh Gerard</td>
+            <td>Departs Ionad an Mhachaire</td>
+            <td>€10</td>
+          </tr>
+          <tr>
+            <th scope="row">11.00am - 1.00pm</th>
+            <td>Childrens Art Activity Camp (Ages 5+)</td>
+            <td>Ionad an Mhachaire</td>
+            <td>€3 per Child, Family Rates Available</td>
+          </tr>
+          <tr>
+            <th scope="row">11.00am</th>
+            <td>Landscape Painting Walk with Local Artist Cornelius Browne</td>
+            <td>Ionad an Mhachaire</td>
+            <td>€5 - Booking on 087 125 8390</td>
+            </tr>
+          <tr>
+            <th scope="row">3.30pm</th>
+            <td>Childrens Cinema Matinee</td>
+            <td>Ionad an Mhachaire</td>
+            <td>€2 per Child</td>
+          </tr>
+          <tr>
+            <th scope="row">8.30pm</th>
+            <td>Big Festival Bingo</td>
+            <td>Ionad an Mhachaire</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <th scope="row">Nightly Music</th>
+            <td>Strand Ceile Band</td>
+            <td>Strand Bar</td>
+            <td>-</td>
+          </tr>
+        </tbody>
+      </table>
+      <h1 style="color:#007CBC;">Thursday August 9th</h1>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Time</th>
+            <th scope="col">Event</th>
+            <th scope="col">Place</th>
+            <th scope="col">Price</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">11.00am</th>
+            <td>Three Hills Walk with Emer Magee</td>
+            <td>Departs Ionad an Mhachaire</td>
+            <td>€10</td>
+          </tr>
+          <tr>
+            <th scope="row">11.00am - 1.00pm</th>
+            <td>Childrens Art Activity Camp (Ages 5+)</td>
+            <td>Ionad an Mhachaire</td>
+            <td>€3 per Child, Family Rates Available</td>
+          </tr>
+          <tr>
+              <th scope="row">3.30pm</th>
+              <td>Childrens Cinema Matinee</td>
+              <td>Ionad an Mhachaire</td>
+              <td>€2 per Child</td>
+            </tr>
+          <tr>
+            <th scope="row">5.00pm</th>
+            <td>Kids Selfie Treasure Hunt, Take Selfies with the Clues!</td>
+            <td>Ionad an Mhachaire</td>
+            <td>€2 per Child</td>
+          </tr>
+          <tr>
+            <th scope="row">7.00pm</th>
+            <td>Annual 5k & Junior 1k Race</td>
+            <td>Strand Bar Marquee(Registration from 6.30pm)</td>
+            <td>5k - €5 | 1k - €2</td>
+          </tr>
+          <tr>
+            <th scope="row">8.30pm</th>
+            <td>Official Opening of the 13th Maghery Festival!</td>
+            <td>Ionad an Maghaire</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <th scope="row">Nightly Music</th>
+            <td>O'Neill Brothers, Supported by Cara Ward</td>
+            <td>Strand Bar</td>
+            <td>-</td>
+            </tr>
+        </tbody>
+      </table>
+      <h1 style="color:#007CBC;">Friday August 10th</h1>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Time</th>
+            <th scope="col">Event</th>
+            <th scope="col">Place</th>
+            <th scope="col">Price</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">11.00am</th>
+            <td>Crohy Head Walk with Jack</td>
+            <td>Departs Ionad an Mhachaire</td>
+            <td>€10</td>
+          </tr>
+          <tr>
+            <th scope="row">11.00am - 1.00pm</th>
+            <td>Childrens Art Activity Camp (Ages 5+)</td>
+            <td>Ionad an Mhachaire</td>
+            <td>€3 per Child, Family Rates Available</td>
+          </tr>
+          <tr>
+            <th scope="row">11.00am</th>
+            <td>Blessing of the Boats & Annual Fishing Competition</td>
+            <td>Blessing at Maghery Pier followed by Deep Sea, Rock or Kayak Fishing</td>
+            <td>€20 per Adult | €5 per Child Pre-register on 0868375430</td>
+          </tr>
+          <tr>
+            <th scope="row">3.30pm</th>
+            <td>Childrens Cinema Matinee</td>
+            <td>Ionad an Mhachaire</td>
+            <td>€2 per Child</td>
+          </tr>
+          <tr>
+            <th scope="row">5.00pm</th>
+            <td>Landing & Weighing of the Catch with music from Cara Ward + Open Mic</td>
+            <td>Strand Bar</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <th scope="row">5.00pm - 7.00pm</th>
+            <td>Junior Kayaking (10 - 13 years)</td>
+            <td>Maghery Pier</td>
+            <td>€15</td>
+            </tr>          
+          <tr>
+            <th scope="row">7.00pm - 9.00pm</th>
+            <td>Sunset Kayaking</td>
+            <td>Maghery Pier</td>
+            <td>€20</td>
+          </tr>
+          <tr>
+            <th scope="row">7.00pm - 9.00pm</th>
+            <td>Stand-Up Paddle Boarding</td>
+            <td>Maghery Pier</td>
+            <td>€30 Adult, €25 Junior</td>
+          </tr>
+          <tr>
+            <th scope="row">7.00pm</th>
+            <td>Dolly Competition</td>
+            <td>Strand Bar</td>
+            <td>-</td>
+            </tr>
+          <tr>
+            <th scope="row">Nightly Music</th>
+            <td>JD Discos</td>
+            <td>Strand Bar</td>
+            <td>-</td>
+          </tr>
+        </tbody>
+      </table>
+      <h1 style="color:#007CBC;">Saturday August 11th</h1>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Time</th>
+            <th scope="col">Event</th>
+            <th scope="col">Place</th>
+            <th scope="col">Price</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">10.00am</th>
+            <td>Hill Walk with Hugh Gerard</td>
+            <td>Departs Ionad an Mhachaire</td>
+            <td>€10</td>
+          </tr>
+          <tr>
+            <th scope="row">10.00am</th>
+            <td>Teddy Bears Picnic</td>
+            <td>Ionad an Mhachaire</td>
+            <td>€3</td>
+          </tr>
+          <tr>
+            <th scope="row">11.00am</th>
+            <td>Under 12's Soccer Camp with Strand Rovers</td>
+            <td>Strand Park</td>
+            <td>FREE!</td>
+          </tr>
+          <tr>
+            <th scope="row">11.00am</th>
+            <td>Fun at the Beach</td>
+            <td>Maghery Beach</td>
+            <td>FREE!</td>
+          </tr>
+          <tr>
+            <th scope="row">12.00pm</th>
+            <td>Car Boot Sale</td>
+            <td>Strand Bar</td>
+            <td>€10 per Stall</td>
+          </tr>
+          <tr>
+            <th scope="row">3.00pm</th>
+            <td>Bubble Football - Strand Rovers Vs. Old Maghery Celtic</td>
+            <td>Strand Park</td>
+            <td>In aid of Motor Neurone Disease</td>
+            </tr>          
+          <tr>
+            <th scope="row">5.00pm - 7.00pm</th>
+            <td>Junior Kayaking (10 - 13 years)</td>
+            <td>Maghery Pier</td>
+            <td>€15</td>
+          </tr>
+          <tr>
+            <th scope="row">7.00pm - 9.00pm</th>
+            <td>Sunset Kayaking</td>
+            <td>Maghery Pier</td>
+            <td>€20</td>
+          </tr>
+          <tr>
+            <th scope="row">7.00pm - 9.00pm</th>
+            <td>Stand-Up Paddle Boarding</td>
+            <td>Maghery Pier</td>
+            <td>€30 Adult, €25 Junior</td>
+            </tr>
+          <tr>
+            <th scope="row">7.00pm</th>
+            <td>Walk the Plank</td>
+            <td>Strand Park</td>
+            <td>€2 per entrant</td>
+            </tr>
+          <tr>
+              <th scope="row">8.00pm</th>
+              <td>Family Fun Table Quiz - Table of 4</td>
+              <td>Ionad an Mhachaire</td>
+              <td>-</td>
+          </tr>
+          <tr>
+            <th scope="row">Nightly Music</th>
+            <td>JD Discos</td>
+            <td>Strand Bar</td>
+            <td>-</td>
+          </tr>
+        </tbody>
+      </table>
+      <h1 style="color:#007CBC;">Sunday August 12th</h1>
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">Time</th>
+            <th scope="col">Event</th>
+            <th scope="col">Place</th>
+            <th scope="col">Price</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">12.15pm</th>
+            <td>Blessing of the Graves</td>
+            <td>Dungloe Graveyard</td>
+            <td>-</td>
+          </tr>
+          <tr>
+              <th scope="row">2.00pm</th>
+              <td>Blessing of the Graves</td>
+              <td>Maghery Graveyard</td>
+              <td>-</td>
+            </tr>
+          <tr>
+            <th scope="row">3.00pm</th>
+            <td>Afternoon Tea</td>
+            <td>Ionad an Mhachaire</td>
+            <td>-</td>
+            </tr>          
+          <tr>
+            <th scope="row">3.00pm</th>
+            <td>The Annual Pet Show</td>
+            <td>Strand Park</td>
+            <td>FREE!</td>
+          </tr>
+          <tr>
+            <th scope="row">3.30pm</th>
+            <td>Sports Day</td>
+            <td>Strand Park</td>
+            <td>FREE!</td>
+          </tr>
+          <tr>
+            <th scope="row">5.00pm</th>
+            <td>Marching Band Recital</td>
+            <td>Strand Park</td>
+            <td>-</td>
+            </tr>
+          <tr>
+            <th scope="row">6.00pm</th>
+            <td>Gladiator Stand Up Paddle Boards</td>
+            <td>Maghery Pier</td>
+            <td>€10 per Adult</td>
+            </tr>
+          <tr>
+            <th scope="row">8.00pm</th>
+            <td>Warm Up with Danny & James</td>
+            <td>Strand Bar</td>
+            <td>-</td>
+          </tr>
+          <tr>
+            <th scope="row">Nightly Music</th>
+            <td>Danny & James</td>
+            <td>Strand Bar</td>
+            <td>-</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
     </div>
     </div>
